1. Метод .of[70623#360311]